--- a/contact/volunteer.html
+++ b/contact/volunteer.html
@@ -15,11 +15,7 @@ title: Volunteer
                 <p>If you are inspired to help close the achievement gap for our students, join us as a volunteer.</p>
                 <p>You have opportunities throughout the day Monday through Friday:</p>
                 <ul>
-                    <li>Tutoring our students in small groups for 1 1/2 hours one to four days per week. Help our students learn letters, numbers, and colors during tutoring sessions Monday through Thursday:</li>
-                    <ul>
-                        <li>Mondays and Tuesdays 8:30 AM - 10:00 AM</li>
-                        <li>Wednesdays and Thursdays 9:40 AM - 11:10 AM</li>
-                    </ul>
+                    <li>Tutoring our students in small groups for 1 1/2 hours one to four days per week. Help our students learn letters, numbers, and colors during tutoring sessions Monday - Thursday from 8:35 - 10:35.</li>
                     <li>Helping to serve lunch from 11:10 AM - 1:10 PM one to five days per week.</li>
                     <li>Riding the bus home with our students for 30-45 minutes at 4:00 PM one to five days per week.</li>
                     <li>Providing Administrative Assistance support on a flexible schedule throughout the week.</li>
