A round of updates

--- a/about/who_we_are.html
+++ b/about/who_we_are.html
@@ -7,41 +7,24 @@ title: Who We Are
         <div class='span12 panel' id='panel-main'>
             <div class='content'>
                 <h2>Who We Are</h2>
-                <p class='center'>
-                    Everything we do at Prodeo Academy, both in and out of the classroom, is based on our Five Core Values:
+                <!--<p class='center'>
+                    <img src='/assets/about/whoweare.jpg'>
+                </p>-->
+                <p class='lead'>Prodeo Academy is a K-8, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.</p>
+                <p class='lead2 center'>
+                    Everything we do at Prodeo Academy, both in and out of<br>the classroom, is based on our Five Core Values:
                     <br>
                     <b>Knowledge, Conscientiousness, Compassion, Integrity,</b>
                     and
                     <b>Respect.</b>
                 </p>
-                <p class='center'>
-                    <img src='/assets/about/whoweare.jpg'>
-                </p>
-                <p>Prodeo Academy is a K-8, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.</p>
-                <p>
+                <p class='lead2'>
                     At Prodeo Academy, every student is engaged in learning. We provide individualized instruction for every child. Excellence is our standard, for both students and teachers. At Prodeo Academy we close the achievement gap by using the best practices in education from the top academic schools in the country. Results matter:
                     <i>we strive to produce results that are among the highest performing schools in the country.</i>
                     Together with our families, we provide a structure and culture of success.
                 </p>
-                <p>
-                    <b>Want to know more?</b>
-                </p>
-                <p>We invite you to learn more about our inspiring community by contacting Rick Campion, Executive Director.</p>
-                <p>rickcampion@prodeoacademy.org</p>
-                <p>(612) 559-4881</p>
-                <a data-toggle='modal' href='#youtube'>
-                    <img class='youtube pull-left' data-position='top' rel='tooltip' src='/assets/youtube.png' title='Watch our video'>
-                </a>
+                <iframe allowfullscreen frameborder='0' height='500px' src='//www.youtube.com/embed/zxs4xAyPIXs?autoplay=1' width='910px'></iframe>
             </div>
         </div>
-    </div>
-</div>
-<div class='modal hide fade' id='youtube'>
-    <div class='modal-header'>
-        <button class='close' data-dismiss='modal' id='stop-video' type='button'>x</button>
-        <h3>Video</h3>
-    </div>
-    <div class='modal-body'>
-        <iframe allowfullscreen frameborder='0' height='328px' id='video' ssrc='//www.youtube.com/embed/zxs4xAyPIXs?autoplay=1' width='530px'></iframe>
     </div>
 </div>
