--- a/approach/family_partnership.html
+++ b/approach/family_partnership.html
@@ -15,6 +15,11 @@ title: Family Partnership
                         <p>The high standards we set for our students are matched by the high standards we set for our staff. We are passionate about the high quality teachers we have hired who provide your child with the tools to be successful.</p>
                         <p>Our staff are easily accessible to families, whether a student has a question about homework or a parent simply wants to reach out to the teacher.</p>
                         <p>In addition to regular conferences, our teachers communicate regularly with families through phone calls, home visits and meetings to ensure that each child is making solid progress at all times.</p>
+                        <h3>Testimonials</h3>
+                        <blockquote>"I have recommended and will continue to recommend Prodeo to strangers and people I know. I love Prodeo! The staff, and everything about it!</blockquote>
+                        <blockquote>"Prodeo Academy is an exemplary school. I wish they had a junior high for my son. I have seen this school grow to become the mission and vision presented to me from day 1."</blockquote>
+                        <blockquote>"I feel very happy to be part of this school and I’m very satisfied with the teachers because my daughter always gets help that she needs thank you Prodeo."</blockquote>
+                        <blockquote>"Our child has had a very positive year at Prodeo. Her teacher has been very accessible to us. She has interacted with us throughout the year. We look forward to sending our child to Prodeo next year and continue to see her achieve academically."</blockquote>
                     </div>
                     <div class='span5'>
                         <img class='pull-right' src='/assets/approach/arianna.jpg'>
