--- a/get_involved/apply_to_tutor.html
+++ b/get_involved/apply_to_tutor.html
@@ -49,8 +49,19 @@ title: Apply to Tutor
                         </ul>
                     </div>
                 </div>
-                <h4>Contact</h4>
-                <p>Please contact Prodeo Academy with questions or to sign up for tutoring:</p>
+                <h3>Apply to Tutor</h3>
+                <p>If you are interested in applying, please fill out our application.</p>
+                <ul>
+                    <li>
+                        <a href='/assets/prodeo-academy-tutor-form.docx' target='blank'>Prodeo Academy Tutor Interest Form.docx</a>
+                        (Microsoft Word)
+                    </li>
+                    <li>
+                        <a href='/assets/prodeo-academy-tutor-form.pdf' target='blank'>Prodeo Academy Tutor Interest Form.pdf</a>
+                        (PDF)
+                    </li>
+                </ul>
+                <p>Please send your interest form or questions to:</p>
                 <p>
                     <b>Anita Kimaiga</b>
                 </p>
