--- a/student_life/community_meeting.html
+++ b/student_life/community_meeting.html
@@ -7,106 +7,30 @@ title: Community Meeting
         <div class='span12 panel' id='panel-main'>
             <div class='content'>
                 <h2>Community Meetings</h2>
-                <p>Every Friday, the students and staff gather in the gym from 12:20pm-12:50pm for Community Meeting to celebrate the week.</p>
-                <p>Parents and visitors are always welcome to attend.</p>
+                <p>Every Friday, our whole school community gathers in the gym from 1:25-1:55 PM for Community Meeting. We celebrate the successes of our week, learn about the academics that each grade level is working on, explore what our values of Conscientiousness, Compassion, Knowledge, Integrity, and Respect look like in action, and honor a scholar who demonstrates our values in an exemplary way. Parents and visitors are always welcome to attend.</p>
                 <h3>Spirit Stick</h3>
-                <p>The highlight of the meeting is the awarding of the Spirit Stick. It is awarded to the student whose actions during the week best embodied the Prodeo Academy values.</p>
-                <p>This scholar proudly keeps the Spirit Stick in his or her classroom during the week and passes it on at the next Community Meeting.</p>
-                <h3>February Winners</h3>
+                <p>The highlight of Community Meeting is when a teacher awards the Spirit Stick. The Spirit Stick winner is chosen because their actions during the week best embodied the Prodeo Academy values. The winning scholar proudly keeps the Spirit Stick in his or her classroom during the week and passes it on at the next Community Meeting. Thy also have a special video made about them that highlights everything that is special about them and is shown to the whole school.</p>
                 <div class='row-fluid'>
                     <div class='span12'>
-                        <ul class='thumbnails'>
+                        <ul class='thumbnails spirit-stick'>
                             <li class='span3'>
                                 <div class='thumbnail'>
                                     <img src='/assets/student_life/winners/feb/1.jpg'>
-                                    <div class='caption'>
-                                        <h4>Georgio</h4>
-                                    </div>
                                 </div>
                             </li>
-                        </ul>
-                    </div>
-                </div>
-                <h3>January Winners</h3>
-                <div class='row-fluid'>
-                    <div class='span12'>
-                        <ul class='thumbnails'>
                             <li class='span3'>
                                 <div class='thumbnail'>
                                     <img src='/assets/student_life/winners/jan/1.jpg'>
-                                    <div class='caption'>
-                                        <h4>Sarah</h4>
-                                    </div>
                                 </div>
                             </li>
                             <li class='span3'>
                                 <div class='thumbnail'>
                                     <img src='/assets/student_life/winners/jan/2.jpg'>
-                                    <div class='caption'>
-                                        <h4>Frida</h4>
-                                    </div>
                                 </div>
                             </li>
-                        </ul>
-                    </div>
-                </div>
-                <h3>December Winners</h3>
-                <div class='row-fluid'>
-                    <div class='span12'>
-                        <ul class='thumbnails'>
                             <li class='span3'>
                                 <div class='thumbnail'>
                                     <img src='/assets/student_life/winners/dec/1.jpg'>
-                                    <div class='caption'>
-                                        <h4>Kaleb</h4>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class='span3'>
-                                <div class='thumbnail'>
-                                    <img src='/assets/student_life/winners/dec/2.jpg'>
-                                    <div class='caption'>
-                                        <h4>Arianna</h4>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class='span3'>
-                                <div class='thumbnail'>
-                                    <img src='/assets/student_life/winners/dec/3.jpg'>
-                                    <div class='caption'>
-                                        <h4>Damiyah</h4>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <h3>November Winners</h3>
-                <div class='row-fluid'>
-                    <div class='span12'>
-                        <ul class='thumbnails'>
-                            <li class='span3'>
-                                <div class='thumbnail'>
-                                    <img src='/assets/student_life/winners/nov/1.jpg'>
-                                    <div class='caption'>
-                                        <h4>Rayquan</h4>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class='span3'>
-                                <div class='thumbnail'>
-                                    <img src='/assets/student_life/winners/nov/2.jpg'>
-                                    <div class='caption'>
-                                        <h4>Maurice</h4>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class='span3'>
-                                <div class='thumbnail'>
-                                    <img src='/assets/student_life/winners/nov/3.jpg'>
-                                    <div class='caption'>
-                                        <h4>Alan</h4>
-                                    </div>
                                 </div>
                             </li>
                         </ul>
