--- a/student_life/typical_day.html
+++ b/student_life/typical_day.html
@@ -15,84 +15,69 @@ title: A Typical Day
                     </thead>
                     <tbody>
                         <tr>
-                            <td>7:10 – 7:35</td>
-                            <td>25 minutes</td>
+                            <td>7:10 – 7:30</td>
+                            <td>20 minutes</td>
                             <td>Arrival/Breakfast</td>
                         </tr>
                         <tr>
-                            <td>7:35 – 7:40</td>
+                            <td>7:30 – 7:35</td>
                             <td>5 minutes</td>
-                            <td>Whole School Morning Chant</td>
+                            <td>Morning Chant</td>
                         </tr>
                         <tr>
-                            <td>7:40 – 8:05</td>
-                            <td>25 minutes</td>
+                            <td>7:35 – 8:15</td>
+                            <td>40 minutes</td>
+                            <td>Choir/Fitness</td>
+                        </tr>
+                        <tr>
+                            <td>8:15 – 8:35</td>
+                            <td>20 minutes</td>
                             <td>Read Aloud</td>
                         </tr>
                         <tr>
-                            <td>8:05 – 8:45</td>
-                            <td>30 minutes</td>
-                            <td>Phonics</td>
-                        </tr>
-                        <tr>
-                            <td>8:45 – 9:25</td>
+                            <td>8:35 – 9:15</td>
                             <td>40 minutes</td>
-                            <td>Reading Block 1/Tutors</td>
+                            <td>Reading Block 1/Tutoring</td>
                         </tr>
                         <tr>
-                            <td>9:25 – 10:05</td>
-                            <td>40 minutes</td>
-                            <td>Reading Block 2/Tutors</td>
+                            <td>9:15 – 9:55</td>
+                            <td>50 minutes</td>
+                            <td>Reading Block 2/Tutoring</td>
                         </tr>
                         <tr>
-                            <td>10:05 – 10:30</td>
-                            <td>25 minutes</td>
-                            <td>Phonics</td>
+                            <td>9:55 – 10:55</td>
+                            <td>60 minutes</td>
+                            <td>Phonics Instruction</td>
                         </tr>
                         <tr>
-                            <td>10:30 – 11:10</td>
-                            <td>40 minutes</td>
-                            <td>Reading Comprehension/Fitness</td>
-                        </tr>
-                        <tr>
-                            <td>11:10 – 11:30</td>
-                            <td>20 minutes</td>
-                            <td>Core</td>
-                        </tr>
-                        <tr>
-                            <td>11:30 - 12:10</td>
-                            <td>40 minutes</td>
-                            <td>Lunch/Recess</td>
-                        </tr>
-                        <tr>
-                            <td>12:10 - 12:30</td>
-                            <td>20 minutes</td>
-                            <td>Math Meeting</td>
-                        </tr>
-                        <tr>
-                            <td>12:30 – 12:50</td>
-                            <td>20 minutes</td>
-                            <td>Math Block 1</td>
-                        </tr>
-                        <tr>
-                            <td>12:50 – 1:10</td>
-                            <td>20 minutes</td>
-                            <td>Math Block 2</td>
-                        </tr>
-                        <tr>
-                            <td>1:10 – 1:30</td>
-                            <td>20 minutes</td>
-                            <td>Math Block 3</td>
-                        </tr>
-                        <tr>
-                            <td>1:30 – 2:10</td>
+                            <td>10:55 – 11:35</td>
                             <td>40 minutes</td>
                             <td>Writing</td>
                         </tr>
                         <tr>
-                            <td>2:10</td>
-                            <td></td>
-                            <td>Dismissal</td>
+                            <td>11:35 - 11:55</td>
+                            <td>20 minutes</td>
+                            <td>Lunch</td>
+                        </tr>
+                        <tr>
+                            <td>11:55-12:15</td>
+                            <td>20 minutes</td>
+                            <td>Recess</td>
+                        </tr>
+                        <tr>
+                            <td>12:15 – 1:25</td>
+                            <td>70 minutes</td>
+                            <td>Math</td>
+                        </tr>
+                        <tr>
+                            <td>1:25 – 2:05</td>
+                            <td>40 minutes</td>
+                            <td>Science/Social Studies</td>
+                        </tr>
+                        <tr>
+                            <td>2:05-2:20</td>
+                            <td>15 minutes</td>
+                            <td>Pack Up/Dismissal</td>
                         </tr>
                     </tbody>
                 </table>
