--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,17 @@ title: Contact
                 <blockquote>
                     <p>Adi Perez</p>
                     <span>adiperez@prodeoacademy.org</span>
-                    <span>763.205.9950</span>
+                    <br>
+                    <span>763-205-9950</span>
                 </blockquote>
             </div>
         </div>
         <div class='span8 panel' id='panel-right'>
             <div class='content'>
                 <h2>Prodeo Academy</h2>
-                <div class='row'>
+                <div class='row-fluid'>
                     <div class='span12'>
+                        <p>Our entrance is located at the corner of 41st Ave. NE and Tyler St. NE where street parking is available.</p>
                         <iframe frameborder='0' height='400' marginheight='0' marginwidth='0' scrolling='no' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2819.154477382078!2d-93.23651599999998!3d45.04208700000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32e65c0f99f43%3A0x69dc5ce113678b36!2sProdeo+Academy!5e0!3m2!1sen!2sus!4v1415000988808' width='600'></iframe>
                         <br>
                     </div>
