--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ layout: default
         <div class='carousel-inner'>
             <div class='container'>
                 <div class='carousel-caption'>
-                    <a data-toggle='modal' href='#youtube'>
-                        <img class='youtube pull-left' data-position='top' rel='tooltip' src='/assets/youtube.png' title='Watch our video'>
+                    <a id='youtube-link' href='#youtube-modal' data-toggle='modal'>
+                        <img class='pull-left' data-position='top' rel='tooltip' src='/assets/youtube.png' title='Watch our video'>
                     </a>
                     <h1>College Starts Here</h1>
-                    <a class='btn btn-large btn-inverse' href='/contact/apply_to_tutor'>Become a Tutor &raquo;</a>
+                    <a class='btn btn-large' href='/about/who_we_are'>Learn More &raquo;</a>
                 </div>
             </div>
             {% assign total = 16 %}
@@ -106,7 +106,7 @@ layout: default
         </p>
     </div>
 </div>
-<div class='modal hide fade' id='youtube'>
+<div class='modal hide fade' id='youtube-modal'>
     <div class='modal-header'>
         <button class='close' data-dismiss='modal' id='stop-video' type='button'>x</button>
         <h3>Video</h3>
@@ -122,17 +122,36 @@ layout: default
     </div>
     <div class='modal-body'>
         <div class='row-fluid'>
-            <div class='span6'>
-                <p class='lead'>Donate online</p>
-                <br>
-                <div class='center'>
-                    <a href='http://www.razoo.com/story/Education-Prodeo-Academy' target='_blank'>
-                        <span>Click to donate online</span>
-                        <img src='/assets/givemn.png'>
-                    </a>
+            <div class='span7'>
+                <div id='razoo_donation_widget'>
+                    <p class='lead'>Donate online</p>
+                    <br>
+                    <div class='center'>
+                        <a href='http://www.razoo.com/story/Education-Prodeo-Academy' target='_blank'>
+                            <span>Click to donate online</span>
+                            <img src='/assets/givemn.png'>
+                        </a>
+                    </div>
                 </div>
+                <script type='text/javascript'>
+                    var r_params = {
+                        "title":"Prodeo Academy",
+                        "short_description":"Help close the achievement gap in MN! We are thankful for any level of support.",
+                        "long_description":"Prodeo Academy is a K-8, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. At Prodeo Academy, every student is engaged in learning. We provide individualized instruction for every child. Excellence is our standard, for both students and teachers. At Prodeo Academy we close the achievement gap by using the best practices in education from the top academic schools in the country. Results matter:   we strive to produce results that are among the highest performing schools in the country. Together with our families, we provide a structure and culture of success.",
+                        "color":"#212359",
+                        "donation_options": {
+                            25: "",
+                            50: "",
+                            75: "",
+                            100: "",
+                        },
+                        "image":"http://prodeoacademy.org/assets/logo.png"
+                    };
+                    var r_identifier='Education-Prodeo-Academy';
+                </script>
+                <script id='razoo_widget_loader_script' src='https://www.razoo.com/javascripts/widget_loader.js' type='text/javascript'></script>
             </div>
-            <div class='span6'>
+            <div class='span5'>
                 <p class='lead'>Donate by mail</p>
                 <p>To make a contribution by mail, send a check to the address below.</p>
                 <p>
