--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
                         <img class='pull-left' data-position='top' rel='tooltip' src='/assets/youtube.png' title='Watch our video'>
                     </a>
                     <h1>College Starts Here</h1>
-                    <a class='btn btn-large' href='/about/who_we_are'>Learn More &raquo;</a>
+                    <a class='btn btn-xlarge' href='/get_involved/work_at_prode'>Now Hiring &raquo;</a>
                 </div>
             </div>
             {% assign total = 16 %}
@@ -112,7 +112,7 @@ layout: default
         <h3>Video</h3>
     </div>
     <div class='modal-body'>
-        <iframe allowfullscreen frameborder='0' height='300px' id='video' ssrc='//player.vimeo.com/video/96627422?autoplay=1' width='530px'></iframe>
+        <iframe allowfullscreen frameborder='0' height='300px' id='video' ssrc='//www.youtube.com/embed/QmSOaDtUN74?autoplay=1' width='530px'></iframe>
     </div>
 </div>
 <div class='modal hide fade' id='donate'>
