--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
                         <img class='pull-left' data-position='top' rel='tooltip' src='/assets/youtube.png' title='Watch our video'>
                     </a>
                     <h1>College Starts Here</h1>
-                    <a class='btn btn-xlarge' href='/get_involved/work_at_prode'>Now Hiring &raquo;</a>
+                    <a class='btn' href='/get_involved/work_at_prode'>Now Hiring &raquo;</a>
                 </div>
             </div>
             {% assign total = 16 %}
