--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -16,22 +16,22 @@ title: Apply to Teach
                 <p>We are currently hiring for the following roles:</p>
                 <ul>
                     <li>
-                        <a href='/assets/jobs/operations_manager.pdf' target='blank'>Operations Manager</a>
+                        <a href='/assets/operations_manager.pdf' target='blank'>Operations Manager</a>
                     </li>
                     <li>
-                        <a href='/assets/jobs/director_of_operations.pdf' target='blank'>Director of Operations</a>
+                        <a href='/assets/director_of_operations.pdf' target='blank'>Director of Operations</a>
                     </li>
                     <li>
-                        <a href='/assets/jobs/grade_team_leader.pdf' target='blank'>Grade Team Leader (K-4)</a>
+                        <a href='/assets/grade_team_leader.pdf' target='blank'>Grade Team Leader (K-4)</a>
                     </li>
                     <li>
-                        <a href='/assets/jobs/classroom_teacher.pdf' target='blank'>Classroom Teacher (PreK-4)</a>
+                        <a href='/assets/classroom_teacher.pdf' target='blank'>Classroom Teacher (PreK-4)</a>
                     </li>
                     <li>
-                        <a href='/assets/jobs/academic_dean.pdf' target='blank'>Academic Dean</a>
+                        <a href='/assets/academic_dean.pdf' target='blank'>Academic Dean</a>
                     </li>
                     <li>
-                        <a href='/assets/jobs/principal.pdf' target='blank'>Principal</a>
+                        <a href='/assets/principal.pdf' target='blank'>Principal</a>
                     </li>
                 </ul>
                 <br>
