--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -16,33 +16,33 @@ title: Apply to Teach
                 <p>We are currently hiring for the following roles:</p>
                 <ul>
                     <li>
-                        <a href='/assets/operations_manager.pdf' target='blank'>Operations Manager</a>
+                        <a href='/assets/jobs/operations_manager.pdf' target='blank'>Operations Manager</a>
                     </li>
                     <li>
-                        <a href='/assets/director_of_operations.pdf' target='blank'>Director of Operations</a>
+                        <a href='/assets/jobs/director_of_operations.pdf' target='blank'>Director of Operations</a>
                     </li>
                     <li>
-                        <a href='/assets/grade_team_leader.pdf' target='blank'>Grade Team Leader (K-4)</a>
+                        <a href='/assets/jobs/grade_team_leader.pdf' target='blank'>Grade Team Leader (K-4)</a>
                     </li>
                     <li>
-                        <a href='/assets/classroom_teacher.pdf' target='blank'>Classroom Teacher (PreK-4)</a>
+                        <a href='/assets/jobs/classroom_teacher.pdf' target='blank'>Classroom Teacher (PreK-4)</a>
                     </li>
                     <li>
-                        <a href='/assets/academic_dean.pdf' target='blank'>Academic Dean</a>
+                        <a href='/assets/jobs/academic_dean.pdf' target='blank'>Academic Dean</a>
                     </li>
                     <li>
-                        <a href='/assets/principal.pdf' target='blank'>Principal</a>
+                        <a href='/assets/jobs/principal.pdf' target='blank'>Principal</a>
                     </li>
                 </ul>
                 <br>
                 <p>If you are interested in applying, please fill out our application.</p>
                 <ul>
                     <li>
-                        <a href='/assets/prodeo-academy-application.docx' target='blank'>Prodeo Academy Application.docx</a>
+                        <a href='/assets/apply/prodeo-academy-application.docx' target='blank'>Prodeo Academy Application.docx</a>
                         (Microsoft Word)
                     </li>
                     <li>
-                        <a href='/assets/prodeo-academy-application.pdf' target='blank'>Prodeo Academy Application.pdf</a>
+                        <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Prodeo Academy Application.pdf</a>
                         (PDF)
                     </li>
                 </ul>
