--- a/about/board.html
+++ b/about/board.html
@@ -13,7 +13,7 @@ title: Board
                         <ul class='thumbnails board'>
                             {% include person.html name="Rick Campion" role="Co-Founder, Executive Director, Prodeo Academy - Ex-Officio" %}
                             {% include person.html name="Mark Chronister" role="Board Chair, Partner at Templeton Laird" %}
-                            {% include person.html name="Vidal Guzman" role="Senior Manager at Public Radio International" %}
+                            {% include person.html name="Rachel Nelson" role="Parent Member" %}
                             {% include person.html name="Skye Hoekstra" role="Teacher, Prodeo Academy" %}
                         </ul>
                         <ul class='thumbnails board'>
