--- a/index.html
+++ b/index.html
@@ -29,19 +29,9 @@ layout: default
             <div class='hero-unit' id='families'>
                 <h3>College Starts Here</h3>
                 <div class='btn-group dropup'>
-                    <a class='btn btn-large dropdown-toggle' data-toggle='dropdown' href='#'>
+                    <a class='btn btn-large dropdown-toggle' href='/enroll'>
                         Enroll Your Child
-                        <span class='caret'></span>
                     </a>
-                    <ul class='dropdown-menu'>
-                        <li>
-                            <a href='/assets/handout_two.pdf' target='_blank'>Why choose Prodeo Academy?</a>
-                        </li>
-                        <li class='divider'></li>
-                        <li>
-                            <a data-toggle='modal' href='#stay-in-touch'>Stay in Touch</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -90,19 +80,19 @@ layout: default
 <div class='modal hide fade' id='stay-in-touch'>
     <div class='modal-header'>
         <button class='close' data-dismiss='modal' type='button'>x</button>
-        <h3>Stay in Touch</h3>
+        <h3>Get in Touch</h3>
     </div>
     <div class='modal-body'>
         <p class='lead'>If you’re interested in learning more about our inspiring community, feel free to contact us.</p>
         <br>
         <p>
-            <b>Jermain Davis</b>
+            <b>Lahens St Fleur, Student Recruiter</b>
         </p>
         <p>
-            <a href='mailto:jermaindavis@prodeoacademy.org'>jermaindavis@prodeoacademy.org</a>
+            <a href='mailto:LahensStFleur@prodeoacademy.org'>LahensStFleur@prodeoacademy.org</a>
         </p>
         <p>
-            <a href='tel:6518155843'>(651) 815-5843</a>
+            <a href='tel:6122071706'>(612) 207-1706</a>
         </p>
     </div>
 </div>
