--- a/enroll.html
+++ b/enroll.html
@@ -21,7 +21,7 @@ title: Contact
                 <h2>Enroll Your Child</h2>
                 <div class='row-fluid'>
                     <div class='span12'>
-                        <p>Completing this form lets us know that you are interested in sending your child to Prodeo Academy, a tuition-free public charter school located in Minneapolis, MN.</p>
+                        <p>Completing this form is the first step in erolling your child at Prodeo Academy, a tuition-free publicpreparatory school located in Minneapolis, MN.</p>
                         <p><i>Please complete a separate form for each child you are interested in enrolling in Prodeo Academy.</i></p>
                         <p><a href="/assets/prodeo_enrollment_handout.pdf" target="_blank">Click here for more information about enrolling your child at Prodeo Academy.</a></p>
                         <form class="form-horizontal" id="enroll">
@@ -71,7 +71,7 @@ title: Contact
                                         <input type="radio" name="grade" value="Grade 4"> Grade 4
                                     </label>
                                     <label class="radio">
-                                        <input type="radio" name="grade" value="Grade 5"> Grade 5
+                                        <input type="radio" name="grade" value="Grade 5"> Grade 5 (will be available for the 2018-19 school year)
                                     </label>
                                 </div>
                             </div>
