--- a/enroll.html
+++ b/enroll.html
@@ -21,7 +21,7 @@ title: Contact
                 <h2>Enroll Your Child</h2>
                 <div class='row-fluid'>
                     <div class='span12'>
-                        <p>Completing this form is the first step in erolling your child at Prodeo Academy, a tuition-free publicpreparatory school located in Minneapolis, MN.</p>
+                        <p>Completing this form is the first step in enrolling your child at Prodeo Academy, a tuition-free public preparatory school located in Minneapolis, MN.</p>
                         <p><i>Please complete a separate form for each child you are interested in enrolling in Prodeo Academy.</i></p>
                         <p><a href="/assets/prodeo_enrollment_handout.pdf" target="_blank">Click here for more information about enrolling your child at Prodeo Academy.</a></p>
                         <form class="form-horizontal" id="enroll">
