Add EA app/job desc

--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -16,10 +16,7 @@ title: Apply to Teach
                 <p>We are currently hiring for the following roles:</p>
                 <ul>
                     <li>
-                        <a href='/assets/jobs/grade_team_leader.pdf' target='blank'>Grade Team Leader (K-4)</a>
-                    </li>
-                    <li>
-                        <a href='/assets/jobs/classroom_teacher.pdf' target='blank'>Classroom Teacher (PreK-4)</a>
+                        <a href='/assets/jobs/educational_associate.pdf' target='blank'>Educational Associate</a>
                     </li>
                     <li>
                         <a href='/assets/jobs/student_teacher.pdf' target='blank'>Student Teacher</a>
@@ -32,12 +29,13 @@ title: Apply to Teach
                 <p>If you are interested in applying, please fill out our application.</p>
                 <ul>
                     <li>
-                        <a href='/assets/apply/prodeo-academy-application.docx' target='blank'>Prodeo Academy Application.docx</a>
-                        (Microsoft Word)
+                        <a href='/assets/apply/educational-assistant-application.pdf' target='blank'>Educational Associate</a>
                     </li>
                     <li>
-                        <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Prodeo Academy Application.pdf</a>
-                        (PDF)
+                        <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Student Teacher</a>
+                    </li>
+                    <li>
+                        <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Intern</a>
                     </li>
                 </ul>
                 <br>
