--- a/get_involved/apply_to_tutor.html
+++ b/get_involved/apply_to_tutor.html
@@ -53,12 +53,7 @@ title: Apply to Tutor
                 <p>If you are interested in applying, please fill out our application.</p>
                 <ul>
                     <li>
-                        <a href='/assets/apply/prodeo-academy-tutor-form.docx' target='blank'>Prodeo Academy Tutor Interest Form.docx</a>
-                        (Microsoft Word)
-                    </li>
-                    <li>
-                        <a href='/assets/apply/prodeo-academy-tutor-form.pdf' target='blank'>Prodeo Academy Tutor Interest Form.pdf</a>
-                        (PDF)
+                        <a href='/assets/apply/prodeo-academy-tutor-form.pdf' target='blank'>Prodeo Academy Tutor Interest Form</a>
                     </li>
                 </ul>
                 <p>Please send your interest form or questions to:</p>
