--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -22,6 +22,9 @@ title: Apply to Teach
                         <a href='/assets/jobs/student_teacher.pdf' target='blank'>Student Teacher</a>
                     </li>
                     <li>
+                        <a href='/assets/jobs/special_education_teacher.pdf' target='blank'>Special Education Teacher</a>
+                    </li>
+                    <li>
                         <a href='/assets/jobs/intern.pdf' target='blank'>Intern</a>
                     </li>
                 </ul>
@@ -33,6 +36,9 @@ title: Apply to Teach
                     </li>
                     <li>
                         <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Student Teacher</a>
+                    </li>
+                    <li>
+                        <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Special Education Teacher</a>
                     </li>
                     <li>
                         <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Intern</a>
