--- a/about/board.html
+++ b/about/board.html
@@ -57,7 +57,7 @@ layout: default
                         </p>
                         <p>
                             All meetings are held at Prodeo Academy at
-                            <i>1555 40th Ave NE, Mpls, MN 55421.</i>
+                            <i>620 Olson Memorial Highway, Mpls, MN 55411.</i>
                         </p>
                         <p>
                             The upcoming agenda, all board minutes, most recent audited financial statements, and our Authorizer's Annual Report can be viewed on
