Add classroom teacher

--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -26,6 +26,9 @@ layout: default
                         <a href='/assets/jobs/special_education_teacher.pdf' target='blank'>Special Education Teacher</a>
                     </li>
                     <li>
+                        <a href='/assets/jobs/classroom_teacher.pdf' target='blank'>Classroom Teacher</a>
+                    </li>
+                    <li>
                         <a href='/assets/jobs/intern.pdf' target='blank'>Intern</a>
                     </li>
                 </ul>
@@ -40,6 +43,9 @@ layout: default
                     </li>
                     <li>
                         <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Special Education Teacher</a>
+                    </li>
+                    <li>
+                        <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Classroom Teacher</a>
                     </li>
                     <li>
                         <a href='/assets/apply/prodeo-academy-application.pdf' target='blank'>Intern</a>
