--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@ layout: default
                 <h2>Prodeo Academy</h2>
                 <div class='row-fluid'>
                     <div class='span12'>
-                        <p>Our entrance is located at the corner of 41st Ave. NE and Tyler St. NE where street parking is available.</p>
-                        <iframe frameborder='0' height='400' marginheight='0' marginwidth='0' scrolling='no' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2819.154477382078!2d-93.23651599999998!3d45.04208700000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32e65c0f99f43%3A0x69dc5ce113678b36!2sProdeo+Academy!5e0!3m2!1sen!2sus!4v1415000988808' width='600'></iframe>
+                        <p>Prodeo Academy is located at 620 Olson Memorial Highway, Minneapolis, MN 55411. Our entrance is located on the south side of the building parallel to Olson Memorial Highway. Parking is available on the north side of the building - off of 7th Ave North.</p>
+                        <iframe frameborder='0' height='400' marginheight='0' marginwidth='0' scrolling='no' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2821.9725340789932!2d-93.28907898412133!3d44.984869073318904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b332f3e35a7619%3A0xb0ba7fd7c956b973!2sProdeo+Academy!5e0!3m2!1sen!2sus!4v1502744087775' width='600'></iframe>
                         <br>
                     </div>
                 </div>
