--- a/get_involved/apply_to_tutor.html
+++ b/get_involved/apply_to_tutor.html
@@ -19,50 +19,62 @@ layout: default
                 <h4>How You Can Help</h4>
                 <p>Every Monday through Thursday we need 15 volunteers for two-hour (8:35am - 10:35am) tutoring spots. Commitments range from every day, to once per week, to once per month when part of an organization’s tutoring team. Tutors/tutor teams work with the same group of students each week to develop meaningful and productive relationships.</p>
                 <h4>Mastering Skills</h4>
-                <p>Tutors at Prodeo Academy help kindergarten through second grade students master fundamental reading, writing, and math skills.</p>
+                <p>Tutors at Prodeo Academy help kindergarten and first grade students master fundamental reading, writing, and math skills.</p>
                 <h4>Support</h4>
                 <p>All tutors receive explicit instructions, resources, and strategies for working with our scholars and subject matter.</p>
-                <p>Prodeo Academy also offers an instructional packet for corporations and organizations interested in coordinating and managing tutoring teams.</p>
+                <p>Prodeo Academy also offers an instructional packet and info/training session for corporations and organizations interested in coordinating and managing tutoring teams.</p>
                 <h4>Partners</h4>
                 <p>Our tutors consist of college students, grad school students, corporate teams, law firm teams, retirees, and other professionals. Many tutors from these and other organizations enjoy working as individuals and in teams to help our scholars succeed:</p>
                 <div class='row-fluid'>
                     <div class='span4'>
                         <ul>
                             <li>Target</li>
-                            <li>Medtronic</li>
                             <li>Stinson Leonard Street</li>
                             <li>Bassford Remele</li>
-                        </ul>
-                    </div>
-                    <div class='span4'>
-                        <ul>
-                            <li>Ryan Companies</li>
-                            <li>PwC</li>
-                            <li>Ulteig</li>
-                            <li>University of St. Thomas</li>
-                        </ul>
-                    </div>
-                    <div class='span4'>
-                        <ul>
-                            <li>University of Minnesota</li>
-                            <li>St. Catherine University</li>
+                            <li>Donaldson Torit</li>
                             <li>Bethel University</li>
                         </ul>
                     </div>
+                    <div class='span4'>
+                        <ul>
+                            <li>Apex</li>
+                            <li>Cargill</li>
+                            <li>Ryan Companies</li>
+                            <li>PwC</li>
+                        </ul>
+                    </div>
+                    <div class='span4'>
+                        <ul>
+                            <li>Ulteig</li>
+                            <li>University of St. Thomas</li>
+                            <li>University of Minnesota</li>
+                            <li>St. Catherine University</li>
+                        </ul>
+                    </div>
                 </div>
-                <h3>Apply to Tutor</h3>
+                <h3>Apply to Volunteer</h3>
                 <p>If you are interested in applying, please fill out our application.</p>
                 <ul>
                     <li>
-                        <a href='/assets/apply/prodeo-academy-tutor-form.pdf' target='blank'>Prodeo Academy Tutor Interest Form</a>
+                        <a href='https://docs.google.com/forms/d/e/1FAIpQLSeiq21xBS_lY12RPU60FT_R7Gk-g1seXegLJfeCkibqy-RgVA/viewform?usp=sf_link' target='blank'>Prodeo Academy Tutor Interest Form</a>
                     </li>
                 </ul>
-                <p>Please send your interest form or questions to:</p>
+                <h4>Volunteer Opportunities</h3>
+                <ul>
+                    <li>Help serve lunch from 11:10 AM - 1:10 PM one to five days per week.</li>
+                    <li>Ride the bus home with our students for 30-45 minutes at 2:20 PM one to five days per week.</li>
+                    <li>Providing Administrative Assistance support on a flexible schedule throughout the week.</li>
+                </ul>
+                <p>If you have time and talent to share, please contact:</p>
                 <p>
-                    <b>Anita Kimaiga</b>
+                    <b>Anna Wagner</b>
+                    <br>
+                    <span>Volunteer Coordinator</span>
                 </p>
                 <p>
-                    <a href='mailto:anitakimaiga@prodeoacademy.org'>anitakimaiga@prodeoacademy.org</a>
+                    <a href='mailto:annawagner@prdeoacademy.org'>annawagner@prdeoacademy.org</a>
+                    <br>
+                    <span>507-993-7666</span>
                 </p>
             </div>
         </div>
