--- a/about/board.html
+++ b/about/board.html
@@ -8,20 +8,19 @@ layout: default
         <div class='span12 panel' id='panel-main'>
             <div class='content'>
                 <h2>Board of Directors</h2>
-                <p>Our board of directors has a wide variety of experience and expertise. Of our 10 members, six have significant experience in education and academics. We also have several board members with strong experience in finance, development, governance, and community relations.</p>
+                <p>Our board of directors is deeply committed to the mission of Prodeo Academy. In addition to their passion for education, they bring a wide range of experience in the areas of finance, human resources, law, consulting, development, governance, and community relations.</p>
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails board'>
                             {% include person.html name="Rick Campion" role="Co-Founder, Executive Director, Prodeo Academy - Ex-Officio" %}
-                            {% include person.html name="Mark Chronister" role="Board Chair, Partner at Templeton Laird" %}
                             {% include person.html name="Rachel Nelson" role="Parent Member" %}
-                            {% include person.html name="Skye Hoekstra" role="Teacher, Prodeo Academy" %}
+                            {% include person.html name="Emily Jones" role="Teacher at Prodeo Academy" %}
+                            {% include person.html name="Jim Horn" role="Chief Human Resources Officer, Ulteig" %}
                         </ul>
                         <ul class='thumbnails board'>
-                            {% include person.html name="Doug Jaeger" role="Vice Chair, CEO Ulteig" %}
                             {% include person.html name="Jeff Klinefelter" role="Board Treasurer, Managing Director, Head of Global Equities at Piper Jaffray" %}
-                            {% include person.html name="Lewis Remele" role="Shareholder, Bassford Remele" %}
-                            {% include person.html name="Maggie Skrypek" role="Board Secretary" %}
+                            {% include person.html name="Lewis Remele" role="Board Secretary<br>Shareholder, Bassford Remele" %}
+                            {% include person.html name="Maggie Skrypek" role="Board Chair<br>Research Scientist, Amherst H. Wilder Foundation" %}
                         </ul>
                     </div>
                 </div>
@@ -38,26 +37,25 @@ layout: default
                 <div class='row-fluid'>
                     <div class='span6'>
                         <p>
-                            Our board meets on the fourth Wednesday of every other month (January, March, May, July, September, and November) at
+                            The Board of Directors meets the 4th Wednesday of August, October, January, March and June at
                             <i>5:30pm.</i>
                         </p>
                         <p>
-                            Our mission committee meets on the third Wednesday of every month at
+                            The Finance Committee meets the 3rd Tuesday of every month at
                             <i>5:30pm.</i>
                         </p>
                         <p>
-                            Our finance committee meets on the third Tuesday of every month at
-                            <i>5:30pm.</i>
+                            The Governance Committee will meet 11/7/17, 1/16/18, 3/7/18, 7/17/18, 9/18/18, and 11/13/18 at
+                            <i>3pm.</i>
                         </p>
                     </div>
                     <div class='span6'>
                         <p>
-                            Out governance committee meets on the second Tuesday of every other month (February, April, June, August, October, December) at
-                            <i>11:30am.</i>
+                            The Executive Committee will meet the 3rd Tuesday of Sept, November, February, April, and July at
+                            <i>9am.</i>
                         </p>
                         <p>
-                            All meetings are held at Prodeo Academy at
-                            <i>620 Olson Memorial Highway, Mpls, MN 55411.</i>
+                            All meetings are held at Prodeo Academy.
                         </p>
                         <p>
                             The upcoming agenda, all board minutes, most recent audited financial statements, and our Authorizer's Annual Report can be viewed on
