--- a/about/board.html
+++ b/about/board.html
@@ -24,7 +24,7 @@ layout: default
                         </ul>
                     </div>
                 </div>
-                <h2>Community Engagment Committe</h2>
+                <h2>Community Engagment Committee</h2>
                 <div class='row-fluid'>
                     <div class='span12'>
                         <ul class='thumbnails board'>
