--- a/about/board.html
+++ b/about/board.html
@@ -58,7 +58,7 @@ layout: default
                             All meetings are held at Prodeo Academy.
                         </p>
                         <p>
-                            The upcoming agenda, all board minutes, most recent audited financial statements, and our Authorizer's Annual Report can be viewed on
+                            The upcoming agenda, all board minutes, most recent audited financial statements, policies, and our Authorizer's Annual Report can be viewed on
                             <a href='https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&amp;usp=sharing#grid' target='_blank'>Google Drive</a>.
                         </p>
                     </div>
